--- a/styles/animation.css
+++ b/styles/animation.css
@@ -5,152 +5,121 @@ div.animation {
   position: fixed;
   top: 0;
   z-index: 10;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 #first {
   stroke-dasharray: 658px;
   stroke-dashoffset: 658px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards;
-          animation: fadeInside 0.6s ease-in forwards;
+  animation: fadeInside 0.6s ease-in forwards;
 }
 
 #second {
   stroke-dasharray: 209px;
   stroke-dashoffset: 209px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 0.3s;
-          animation: fadeInside 0.6s ease-in forwards 0.3s;
+  animation: fadeInside 0.6s ease-in forwards 0.3s;
 }
 
 #third {
   stroke-dasharray: 314px;
   stroke-dashoffset: 314px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 0.6s;
-          animation: fadeInside 0.6s ease-in forwards 0.6s;
+  animation: fadeInside 0.6s ease-in forwards 0.6s;
 }
 
 #fourth {
   stroke-dasharray: 393px;
   stroke-dashoffset: 393px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 0.9s;
-          animation: fadeInside 0.6s ease-in forwards 0.9s;
+  animation: fadeInside 0.6s ease-in forwards 0.9s;
 }
 
 #fifth {
   stroke-dasharray: 391px;
   stroke-dashoffset: 391px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 1.2s;
-          animation: fadeInside 0.6s ease-in forwards 1.2s;
+  animation: fadeInside 0.6s ease-in forwards 1.2s;
 }
 
 #sixth {
   stroke-dasharray: 397px;
   stroke-dashoffset: 397px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 1.5s;
-          animation: fadeInside 0.6s ease-in forwards 1.5s;
+  animation: fadeInside 0.6s ease-in forwards 1.5s;
 }
 
 #seventh {
   stroke-dasharray: 203px;
   stroke-dashoffset: 203px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 1.8s;
-          animation: fadeInside 0.6s ease-in forwards 1.8s;
+  animation: fadeInside 0.6s ease-in forwards 1.8s;
 }
 
 #eighth {
   stroke-dasharray: 425px;
   stroke-dashoffset: 425px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 2.1s;
-          animation: fadeInside 0.6s ease-in forwards 2.1s;
+  animation: fadeInside 0.6s ease-in forwards 2.1s;
 }
 
 #ninth {
   stroke-dasharray: 394px;
   stroke-dashoffset: 394px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 2.4s;
-          animation: fadeInside 0.6s ease-in forwards 2.4s;
+  animation: fadeInside 0.6s ease-in forwards 2.4s;
 }
 
 #tenth {
   stroke-dasharray: 391px;
   stroke-dashoffset: 391px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 2.7s;
-          animation: fadeInside 0.6s ease-in forwards 2.7s;
+  animation: fadeInside 0.6s ease-in forwards 2.7s;
 }
 
 #eleventh {
   stroke-dasharray: 349px;
   stroke-dashoffset: 349px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 3.0s;
-          animation: fadeInside 0.6s ease-in forwards 3.0s;
+  animation: fadeInside 0.6s ease-in forwards 3s;
 }
 
 #twelfth {
   stroke-dasharray: 1486px;
   stroke-dashoffset: 1486px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards;
-          animation: fadeInside 0.6s ease-in forwards;
+  animation: fadeInside 0.6s ease-in forwards;
 }
 
 #thirteenth {
   stroke-dasharray: 1132px;
   stroke-dashoffset: 1132px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 0.5s;
-          animation: fadeInside 0.6s ease-in forwards 0.5s;
+  animation: fadeInside 0.6s ease-in forwards 0.5s;
 }
 
 #fourteenth {
   stroke-dasharray: 1108px;
   stroke-dashoffset: 1108px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 1.0s;
-          animation: fadeInside 0.6s ease-in forwards 1.0s;
+  animation: fadeInside 0.6s ease-in forwards 1s;
 }
 
 #fifteenth {
   stroke-dasharray: 1356px;
   stroke-dashoffset: 1356px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 1.5s;
-          animation: fadeInside 0.6s ease-in forwards 1.5s;
+  animation: fadeInside 0.6s ease-in forwards 1.5s;
 }
 
 #sixteenth {
   stroke-dasharray: 571px;
   stroke-dashoffset: 571px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 2.0s;
-          animation: fadeInside 0.6s ease-in forwards 2.0s;
+  animation: fadeInside 0.6s ease-in forwards 2s;
 }
 
 #seventeenth {
   stroke-dasharray: 1232px;
   stroke-dashoffset: 1232px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 2.5s;
-          animation: fadeInside 0.6s ease-in forwards 2.5s;
+  animation: fadeInside 0.6s ease-in forwards 2.5s;
 }
 
 #eighteenth {
   stroke-dasharray: 1172px;
   stroke-dashoffset: 1172px;
-  -webkit-animation: fadeInside 0.6s ease-in forwards 3.0s;
-          animation: fadeInside 0.6s ease-in forwards 3.0s;
+  animation: fadeInside 0.6s ease-in forwards 3s;
 }
 
 svg {
-  -webkit-animation: fill 1s ease-in forwards 3.0s;
-          animation: fill 1s ease-in forwards 3.0s;
-}
-
-@-webkit-keyframes fadeInside {
-  to {
-    stroke-dashoffset: 0px;
-  }
+  animation: fill 1s ease-in forwards 3s;
 }
 
 @keyframes fadeInside {
@@ -158,16 +127,6 @@ svg {
     stroke-dashoffset: 0px;
   }
 }
-
-@-webkit-keyframes fill {
-  from {
-    fill: transparent;
-  }
-  to {
-    fill: white;
-  }
-}
-
 @keyframes fill {
   from {
     fill: transparent;
@@ -175,5 +134,4 @@ svg {
   to {
     fill: white;
   }
-}
-/*# sourceMappingURL=animation.css.map */
+}/*# sourceMappingURL=animation.css.map */
